--- a/views/_booking_price.erb
+++ b/views/_booking_price.erb
@@ -1,4 +1,4 @@
-         <div class="left-margin highlight_block">
+         <div class="left-margin guiblock">
            <div>
              <div class="top-space bottom-space bottom-margin bottom-separator">
                <div class="centered_text">
