--- a/views/_booking_selector.erb
+++ b/views/_booking_selector.erb
@@ -1,4 +1,4 @@
-	  <div id="highlight_block" class="bottom-margin-2lines">
+	  <div id="guiblock" class="bottom-margin-2lines">
 		  <form id="form-search-item" name="form-search-item" action="/p/booking/start">
         <div class="container_12">
           <div class="prefix_1 grid_4">
