--- a/views/_booking_selector_inline.erb
+++ b/views/_booking_selector_inline.erb
@@ -1,4 +1,4 @@
-	  <div id="highlight_block">
+	  <div id="guiblock">
 		  <form id="form-search-item" name="form-search-item" action="/p/booking/start">
 		      <div class="formrow">
 		      	<label for="datefrom" id="labeldatefrom">
