--- a/views/_booking_management_detail.erb
+++ b/views/_booking_management_detail.erb
@@ -16,7 +16,7 @@
                                <td class="table-cell left_text"><%%=entity.booking_lines[lineIdx].item_id%> - <%%= entity.booking_lines[lineIdx].item_description %></td>
                                <td class="table-cell right_text"><%%= entity.days %></td>                               
                                <td class="table-cell right_text"><%%= entity.booking_lines[lineIdx].quantity %></td>
-                               <td class="table-cell right_text"><%%= new Number(entity.booking_lines[lineIdx].item_unit_cost).toFixed(2) %></td>
+                               <td class="table-cell right_text"><%%if(entity.booking_lines[lineIdx].item_unit_cost != entity.booking_lines[lineIdx].item_unit_cost_base){%><span class="smaller_text less_constrast_text" style="text-decoration:line-through"><%%= new Number(entity.booking_lines[lineIdx].item_unit_cost_base).toFixed(2) %>&nbsp;</span><%%}%><%%= new Number(entity.booking_lines[lineIdx].item_unit_cost).toFixed(2) %></td>
                                <td class="table-cell right_text"><%%= new Number(entity.booking_lines[lineIdx].product_deposit_cost).toFixed(2) %></td>                               
                                <td class="table-cell right_text"><%%= new Number(entity.booking_lines[lineIdx].item_cost).toFixed(2) %></td>
                             </tr>
