--- a/views/_booking_menu.erb
+++ b/views/_booking_menu.erb
@@ -16,31 +16,6 @@
 
 <div id="cssmenu" class="booking_menu admin_menu smaller_text all-space">
   <ul>
-   <li class='<%if ['/admin/booking/config/general','/admin/booking/config/templates','/admin/booking/booking-place-defs','/admin/calendar/timetables',
-   '/admin/rates/seasons','/admin/booking/booking-places',
-   '/admin/rates/season-defs','/admin/rates/factor-defs',
-   '/admin/rates/promotion-codes'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.configuration%></a>
-      <ul>
-        <li><a href='/admin/booking/config/general'><%=t.booking_console_configuration.general_configuration%></a></li>
-        <li><a href='/admin/booking/config/templates'><%=t.booking_console_configuration.templates%></a></li>
-
-<li class='<%if ['/admin/booking/booking-place-defs','/admin/calendar/timetables'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.pickup_return%></a>
-      <ul>
-        <li><a href='/admin/booking/booking-place-defs'><%=t.booking_console.places%></a></li>
-        <li><a href='/admin/calendar/timetables'><%=t.booking_console.timetables%></a></li>
-      </ul>
-</li>      
-
-<li class='<%if ['/admin/rates/season-defs','/admin/rates/factor-defs','/admin/rates/promotion-codes'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.rates%></a>
-      <ul>
-        <li><a href='/admin/rates/season-defs'><%=t.rates_console.seasons%></a></li>
-        <li><a href='/admin/rates/factor-defs'><%=t.rates_console.factors%></a></li>
-        <li><a href='/admin/rates/promotion-codes'><%=t.rates_console.promotion_codes%></a></li>        
-      </ul>    
-   </li>                           
-      </ul>
-   </li>
-
    <li class='<%if ['/admin/booking/catalog','/admin/booking/booking-categories','/admin/booking/booking-items','/admin/booking/booking-extras', '/admin/rates/adjust-prices','/admin/booking/activities'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.products%></a>
       <ul>
         <li><a href='/admin/booking/booking-categories'><%=t.booking_console.categories%></a></li>
@@ -51,8 +26,7 @@
         <% end %>       
         <li><a href='/admin/rates/adjust-prices'><%=t.booking_console.adjust_prices%></a></li>                        
       </ul>    
-   </li>
-   <li style="display:none" class='<%if ['/admin/calendar/calendars'].index(request.path)%>active<%end%>'><a href='/admin/calendar/calendars'><%=t.booking_console.calendars%></a></li>        
+   </li>    
    <li class='<%if ['/admin/booking/new','/admin/booking/customers', '/admin/booking/bookings','/admin/booking/planning'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.bookings%></a>
       <ul>
         <li><a href='/admin/booking/customers'><%=t.booking_console.new_booking%></a></li>           
@@ -92,7 +66,33 @@
       <ul>
         <li><a href='/admin/booking/create-rates'><%=t.booking_console_configuration.create_rates%></a></li>           
       </ul>    
-   </li>             
+   </li>    
+   <li class='<%if ['/admin/booking/config/general',
+    '/admin/booking/config/templates','/admin/booking/booking-place-defs',
+    '/admin/calendar/timetables',
+    '/admin/rates/seasons','/admin/booking/booking-places',
+    '/admin/rates/season-defs','/admin/rates/factor-defs',
+    '/admin/rates/promotion-codes'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.configuration%></a>
+      <ul>
+        <li><a href='/admin/booking/config/general'><%=t.booking_console_configuration.general_configuration%></a></li>
+        <li><a href='/admin/booking/config/templates'><%=t.booking_console_configuration.templates%></a></li>
+        <li class='<%if ['/admin/booking/booking-place-defs','/admin/calendar/timetables'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.pickup_return%></a>
+          <ul>
+             <li><a href='/admin/booking/booking-place-defs'><%=t.booking_console.places%></a></li>
+             <li><a href='/admin/calendar/timetables'><%=t.booking_console.timetables%></a></li>
+          </ul>
+        </li>      
+        <li class='<%if ['/admin/rates/season-defs','/admin/rates/factor-defs','/admin/rates/promotion-codes'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.rates%></a>
+          <ul>
+            <li><a href='/admin/rates/season-defs'><%=t.rates_console.seasons%></a></li>
+            <li><a href='/admin/rates/factor-defs'><%=t.rates_console.factors%></a></li>
+            <li><a href='/admin/rates/promotion-codes'><%=t.rates_console.promotion_codes%></a></li>     
+            <li><a href='/admin/rates/discounts'><%=t.rates_console.discounts%></a></li>                   
+          </ul>    
+        </li>                           
+      </ul>
+   </li>
+            
   </ul>
 </div>
 
