--- a/views/_reserva_online_category_form.erb
+++ b/views/_reserva_online_category_form.erb
@@ -1,7 +1,9 @@
-                      <p id="item_description"></p>
+                    <div class="top-margin">
+	                  <h3 class="guiblock"><%=(booking_item_family.start_date_literal==:arrival)?(t.new_booking.arrival):(t.new_booking.pickup)%>/<%=(booking_item_family.start_date_literal==:arrival)?(t.new_booking.departure):(t.new_booking.return)%></h3>
+	                  <h4><%=(booking_item_family.start_date_literal==:arrival)?(t.new_booking.arrival):(t.new_booking.pickup)%></h3>
 	                  <div>
 	                    <label class="fieldtitle" style="display:inline-block; width:25%">
-	          	         <%=(booking_item_family.start_date_literal==:arrival)?(t.new_booking.arrival):(t.new_booking.pickup)%>
+	          	         <%=t.new_booking.date%>
 	                    </label>
                         <input type="text" name="date_from_extended" id="date_from_extended" class="readonly-field" readonly="readonly" style="width:15em"/>
 	                  </div>
@@ -10,14 +12,15 @@
 		              <div>
 	                     <div class="collection_place">
 	                       <label for="pickup_place_extended" class="fieldtitle" style="display:inline-block; width:25%"><%=t.new_booking.place%></label>
-	                       <textarea name="pickup_place_extended" id="pickup_place_extended" class="readonly-field" readonly="readonly" rows="3"></textarea>
+	                       <p id="pickup_place_extended" style="display:inline-block;"></p>
 	                     </div>
 	                  </div>
 	                  <% end %>	    
 
+                      <h4><%=(booking_item_family.start_date_literal==:arrival)?(t.new_booking.departure):(t.new_booking.return)%></h3>
 	                  <div>
 	                    <label class="fieldtitle" style="display:inline-block; width:25%">
-	          	          <%=(booking_item_family.start_date_literal==:arrival)?(t.new_booking.departure):(t.new_booking.return)%>
+	          	          <%=t.new_booking.date%>
 	                    </label>
                         <input type="text" name="date_to_extended" id="date_to_extended" class="readonly-field" readonly="readonly" style="width:15em"/>
 	                  </div>
@@ -26,7 +29,7 @@
 		              <div >
 	                    <div class="return_place">
 	                      <label for="return_place_extended" class="fieldtitle" style="display:inline-block; width:25%"><%=t.new_booking.place%></label>
-	      	              <textarea name="return_place_extended" id="return_place_extended" class="readonly-field" readonly="readonly" rows="3"></textarea>
+	      	              <p id="return_place_extended" style="display:inline-block;"></p>
                         </div>
                       </div>
 	                  <% end %>	    
@@ -63,4 +66,5 @@
                           </select>
                         </div>    
                       </div>                   
-                      <% end %>		                
+                      <% end %>	
+                    </div>  	                
