--- a/views/_reserva_online_dates_selection.erb
+++ b/views/_reserva_online_dates_selection.erb
@@ -1,4 +1,9 @@
-		  <form id="form-search-item" name="form-search-item" class="guiblock">
+		  <form id="form-search-item" name="form-search-item">
+		    <div class="container_12">
+              <div class="grid_12">
+                <h3 id="search_title"><%=t.new_booking.search_title(t.booking_items[booking_item_type.to_sym])%></h3>
+              </div>
+		    </div>
 		    <div class="container_12">
 		      <div class="grid_4">
 		      <div class="formrow">
