--- a/views/_reserva_online_summary_header.erb
+++ b/views/_reserva_online_summary_header.erb
@@ -2,24 +2,30 @@
 	        <fieldset id="fs_summary_item">
 	              <% if booking_reservation_starts_with == :shopcart %>
 	                <div style="overflow:hidden">
-	                  <div id="summary_dates" class="grid_6" style="padding-bottom:1000px; margin-bottom: -1000px; background:white">
-	                  	<div class="all-space smaller_text">
-	                  	  <h2 style="margin-top: 0; text-decoration: underline; font-size: 1.5em;"><%=t.booking_console.places%></h2>
+	                  <div id="summary_dates" class="grid_5" style="padding-bottom:1000px; margin-bottom: -1000px; background:white">
+	                  	<div class="left-margin smaller_text">
                           <%= partial :reserva_online_category_form, :locals => {:booking_item_family => booking_item_family} %>
                         </div>
                       </div>
-	                  <div id="summary_costs" class="grid_6">
+	                  <div id="summary_costs" class="grid_7">
                          <div class="top-margin right-margin left-margin smaller_text">
 	    	                <input type="hidden" name="total_cost" id="total_cost"/>
-	      	                <div id="detailed_summary" class="all-space">
-	                        </div>      
+	      	                <div id="detailed_summary">
+	                        </div>
+	                        <%= partial :reserva_online_promotion_code, :locals => {:promotion_codes_active => promotion_codes_active} %>      
 	                     </div>
                       </div>
                     </div>  
 	              <% else %>	
                     <% if booking_item_family.pickup_return_place %>
 	                  <div class="grid_3">
-	                    <img id="item_image" style="width: 170px"/>	
+	                  	<div class="right-margin smaller_text left-margin">
+	                      <div class="top-margin">
+ 	                  	    <h3 class="guiblock"><%= t.booking_items[booking_item_type.to_sym].html_safe.capitalize %></h3>
+	                        <img id="item_image" style="width: 170px;padding: 0"/>	
+                            <p id="item_description" class="bigger_text more_contrast_text centered_text"></p>
+                          </div>
+                        </div>
 	                  </div>
 	                  <div class="grid_4">              	
 	                    <div class="right-margin smaller_text left-margin">
@@ -29,22 +35,24 @@
 	                  <div class="grid_5">
 	                    <div class="top-margin right-margin left-margin smaller_text">
 	      	               <input type="hidden" name="total_cost" id="total_cost"/>
-	      	               <div id="detailed_summary" class="all-space">
-	                       </div>      
+	      	               <div id="detailed_summary">
+	                       </div>
+	                       <%= partial :reserva_online_promotion_code, :locals => {:promotion_codes_active => promotion_codes_active} %>      
 	                    </div>
 	                  </div>
 	                <% else %>
-	                  <div class="grid_6">
+	                  <div class="grid_5">
 	                    <img id="item_image" style="width: 240px"/>	
 	                    <div class="right-margin smaller_text centered_text">
                           <%= partial :reserva_online_category_form, :locals => {:booking_item_family => booking_item_family} %>	       	
 	                    </div>	
 	                  </div>
-	                  <div class="grid_6">
+	                  <div class="grid_7">
 	                    <div class="top-margin right-margin left-margin smaller_text">
 	      	               <input type="hidden" name="total_cost" id="total_cost"/>
-	      	               <div id="detailed_summary" class="all-space">
-	                       </div>      
+	      	               <div id="detailed_summary">
+	                       </div>     
+	                       <%= partial :reserva_online_promotion_code, :locals => {:promotion_codes_active => promotion_codes_active} %> 
 	                    </div>
 	                  </div>	                                  
 	                <% end %>
