--- a/views/reserva-finalizada.erb
+++ b/views/reserva-finalizada.erb
@@ -1,6 +1,6 @@
  <div class="container_12">
    <div class="grid_8">
-     <div class="highlight_block top-margin">
+     <div class="guiblock top-margin">
        <%= partial(:reserva, :locals => {:booking => booking, :message => ''}) %>  
      </div>
    </div>
