--- a/views/reserva_request_restaurant.erb
+++ b/views/reserva_request_restaurant.erb
@@ -1,6 +1,6 @@
  <div class="container_12">
    <div class="grid_8">
-   	 <div class="highlight_block top-margin">
+   	 <div class="guiblock top-margin">
        <%= partial(:restaurant_reserva, :locals => {:booking => booking,
                    :message => booking_summary_message}) %>  
      </div>
