--- a/views/reserva-online.erb
+++ b/views/reserva-online.erb
@@ -5,19 +5,19 @@
           <div id="wizard-navigation">
             <ul id="wizard-options">
               <li>
-              	 <a id="tab-choose-item" href="#1" class="tab img_txt">
+              	 <a id="tab-choose-item" class="tab img_txt">
               	   <span class="tab_id">1</span>
                    <span class="tab_title"><%= t.new_booking.choose_item(t.booking_items[booking_item_type.to_sym]) %></span>
                  </a>
               </li>
               <li>
-              	 <a id="tab-choose-extras" href="#2" class="tab img_txt">
+              	 <a id="tab-choose-extras" class="tab img_txt">
               	 	<span class="tab_id">2</span>
               	 	<span class="tab_title"><%=t.new_booking.choose_extras%></span>
               	 </a>
               </li>
               <li>
-              	  <a id="tab-complete-reservation" href="#3" class="tab img_txt">
+              	  <a id="tab-complete-reservation" class="tab img_txt">
               	  	<span class="tab_id">3</span>
               	  	<span class="tab_title"><%=t.new_booking.complete_booking%></span>
               	  </a>
