--- a/views/_booking_menu.erb
+++ b/views/_booking_menu.erb
@@ -46,8 +46,13 @@
         <li><a href='/admin/order/information-requests'><%=t.booking_console.information_requests%></a></li>  
       </ul>
    </li>
-   <li class='<%if ['/admin/booking/console'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.listing%></a>
+   <li class='<%if ['/admin/booking/reports/reservations',
+      '/admin/booking/reports/customers',
+      '/admin/booking/console',
+      ].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.listing%></a>
       <ul>
+        <li><a href='/admin/booking/reports/reservations'><%=t.booking_console.report_reservations%></a></li>
+        <li><a href='/admin/booking/reports/customers'><%=t.booking_console.report_customers%></a></li>        
         <li><a href='/admin/booking/console'><%=t.booking_console.title%></a></li>           
       </ul>    
    </li>
