--- a/views/_pickedup_bookings.erb
+++ b/views/_pickedup_bookings.erb
@@ -1,3 +1,14 @@
+<style>
+#table {
+  table-layout: fixed;
+  border: 1px solid #EEE;
+}
+ #table .table-cell, #table .table-header-title {
+   border-right: 1px solid #EEE;
+   width: 1.6em;
+   font-size: 0.85em;
+ }
+</style>
 <div class="container_12">
   <div class="grid_6">
     <form>
@@ -15,37 +26,43 @@
 <h3><%= t.booking_pickup.title%></h3>
 <div class="container_12">
   <div class="grid_12">
-    <div id="pickedup_booking_data" class="guiblock centered_text">
+    <div id="pickedup_booking_data">
     </div>
   </div>
 </div>
 <h3><%= t.booking_return.title%></h3>
 <div class="container_12">
   <div class="grid_12">
-    <div id="returned_booking_data" class="guiblock centered_text">
+    <div id="returned_booking_data">
     </div>
   </div>
 </div>
 
 <script type="text/template" id="pickedup_bookings_table">
  <%% if (data.length == 0) { %>
+    <div class="all-border-solid-light">
          <p class="no-data-message"><%= t.entitymanagement.no_data %></p>
+    </div>
  <%% } else { %> 
 
  <div class="table-container">
-    <table id="elements_table" class="table">
+    <table id="table" class="table">
        <thead class="table-header">
          <tr>
-           <th class="table-header-title left_text" scope="col" style="width:10%"><%=t.booking_list.id%></th>
-           <th class="table-header-title left_text" scope="col" style="width:15%"><%=t.booking_list.date_from%></th>
+           <th class="table-header-title left_text" scope="col"><%=t.booking_list.id%></th>
+           <th class="table-header-title left_text" scope="col" style="width:3em"><%=t.booking_list.date_from%></th>
            <% if product_family and product_family.pickup_return_place %>
-           <th class="table-header-title left_text" scope="col" style="width:15%"><%=t.booking_list.place%></th>
+           <th class="table-header-title left_text" scope="col"><%=t.booking_list.place%></th>
            <% end %>
-           <th class="table-header-title left_text" scope="col" style="width:15%"><%=t.booking_list.customer%></th>
-           <th class="table-header-title left_text" scope="col" style="width:10%"><%=t.booking_list.customer_phone%></th>
-           <th class="table-header-title left_text" scope="col" style="width:10%"><%=t.booking_list.status%></th>
-           <th class="table-header-title left_text" scope="col" style="width:10%"/>
-           <th class="table-header-title left_text" scope="col" style="width:15%"><%=t.booking_list.item%></th>
+           <th class="table-header-title left_text" scope="col" style="width:5em"><%=t.booking_list.customer%></th>
+           <th class="table-header-title left_text" scope="col"><%=t.booking_list.customer_phone%></th>
+           <th class="table-header-title left_text" scope="col" style="width:5em"><%=t.booking_list.customer_email%></th>
+           <% if product_family and product_family.flight %>          
+           <th class="table-header-title left_text" scope="col"><%=t.booking_list.flight%></th>       
+           <% end %>
+           <th class="table-header-title left_text" scope="col"><%=t.booking_list.total_pending%></th>            
+           <th class="table-header-title left_text" scope="col"><%=t.booking_list.item%></th>
+           <th class="table-header-title centered_text" scope="col" style="width:4em"></th>
          </tr>
        </thead>
        <tbody id="elements_tbody" class="table-tbody">  
@@ -59,14 +76,18 @@
            <td class="table-cell left_text right-margin"><%%=data[i].pickup_place%></td>
            <% end %>
            <td class="table-cell left_text right-margin"><%%=data[i].customer_name%> <%%=data[i].customer_surname%></td>
-           <td class="table-cell left_text right-margin"><%%=data[i].customer_phone%> <%%=data[i].customer_mobile_phone%></td> 
-           <td class="table-cell left_text right-margin"><%%=data[i].status%></td> 
+           <td class="table-cell left_text right-margin"><%%=data[i].customer_phone%> <%%=data[i].customer_mobile_phone%></td>
+           <td class="table-cell left_text right-margin"><%%=data[i].customer_email%></td>
+           <% if product_family and product_family.flight %>
            <td class="table-cell left_text right-margin"><%%=data[i].flight_number%> <%%=data[i].flight_time%></td>
+           <% end %>
+           <td class="table-cell right_text right-margin"><%%=data[i].total_pending ? new Number(data[i].total_pending).toFixed(2) : new Number(0).toFixed()%></td>           
            <td class="table-cell left_text">
              <%% for (var idx=0;idx<data[i].booking_line_resources.length;idx++) { %>
                <%%=data[i].booking_line_resources[idx].booking_item_reference%>&nbsp;
              <%% } %>
-           </td>                     
+           </td>     
+           <td class="table-cell"><div class="form-button"><a href="/admin/booking/contract/<%%=data[i].id%>" target="_blank"><%=t.booking_management.print_contract%></a></div></td>                
          </tr>
          <%% } %>
        </tbody>
@@ -77,22 +98,23 @@
 
 <script type="text/template" id="returned_bookings_table">
  <%% if (data.length == 0) { %>
+    <div class="all-border-solid-light">
          <p class="no-data-message"><%= t.entitymanagement.no_data %></p>
+    </div>
  <%% } else { %> 
  <div class="table-container">
-    <table id="elements_table" class="table">
+    <table id="table" class="table">
        <thead class="table-header">
          <tr>
-           <th class="table-header-title left_text" scope="col" style="width:10%"><%=t.booking_list.id%></th>
-           <th class="table-header-title left_text" scope="col" style="width:15%"><%=t.booking_list.date_to%></th>
+           <th class="table-header-title left_text" scope="col"><%=t.booking_list.id%></th>
+           <th class="table-header-title left_text" scope="col"><%=t.booking_list.date_to%></th>
            <% if product_family and product_family.pickup_return_place %>
-           <th class="table-header-title left_text" scope="col" style="width:15%"><%=t.booking_list.place%></th>
+           <th class="table-header-title left_text" scope="col"><%=t.booking_list.place%></th>
            <% end %>
-           <th class="table-header-title left_text" scope="col" style="width:15%"><%=t.booking_list.customer%></th>
-           <th class="table-header-title left_text" scope="col" style="width:10%"><%=t.booking_list.customer_phone%></th>
-           <th class="table-header-title left_text" scope="col" style="width:10%"><%=t.booking_list.status%></th>
-           <th class="table-header-title left_text" scope="col" style="width:10%"/>
-           <th class="table-header-title left_text" scope="col" style="width:15%"><%=t.booking_list.item%></th>
+           <th class="table-header-title left_text" scope="col"><%=t.booking_list.customer%></th>
+           <th class="table-header-title left_text" scope="col"><%=t.booking_list.customer_phone%></th>
+           <th class="table-header-title left_text" scope="col"><%=t.booking_list.customer_email%></th> 
+           <th class="table-header-title left_text" scope="col"><%=t.booking_list.item%></th>
          </tr>
        </thead>
        <tbody id="elements_tbody" class="table-tbody">  
@@ -106,9 +128,8 @@
            <td class="table-cell left_text right-margin"><%%=data[i].return_place%></td>
            <% end %>
            <td class="table-cell left_text right-margin"><%%=data[i].customer_name%> <%%=data[i].customer_surname%></td>
-           <td class="table-cell left_text right-margin"><%%=data[i].customer_phone%> <%%=data[i].customer_mobile_phone%></td> 
-           <td class="table-cell left_text right-margin"><%%=data[i].status%></td> 
-           <td class="table-cell left_text right-margin"></td>          
+           <td class="table-cell left_text right-margin"><%%=data[i].customer_phone%> <%%=data[i].customer_mobile_phone%></td>
+           <td class="table-cell left_text right-margin"><%%=data[i].customer_email%></td>                    
            <td class="table-cell left_text">
              <%% for (var idx=0;idx<data[i].booking_line_resources.length;idx++) { %>
                <%%=data[i].booking_line_resources[idx].booking_item_reference%>&nbsp;
