--- a/views/booking_dashboard.js.erb
+++ b/views/booking_dashboard.js.erb
@@ -6,7 +6,7 @@ require(['jquery','charts'], function($, Chart) {
       labels: ["L", "M", "X", "J", "V", "S", "D"],
         datasets: [
           {
-            label: "My First dataset",
+            label: "Reservations by day",
             fillColor: "rgba(220,220,220,0.5)",
             strokeColor: "rgba(220,220,220,0.8)",
             highlightFill: "rgba(220,220,220,0.75)",
@@ -38,10 +38,10 @@ require(['jquery','charts'], function($, Chart) {
     ],
 
    last30DaysReservationsData : {
-     labels: [<% @last_30_days_reservations.each do |key, value|%><%=key%>,<%end%>],
+     labels: [<% @last_30_days_reservations.each do |key, value|%>'<%=key%>',<%end%>],
      datasets: [
         {
-            label: "My First dataset",
+            label: "Last 30 days reservations",
             fillColor: "rgba(220,220,220,0.2)",
             strokeColor: "rgba(220,220,220,1)",
             pointColor: "rgba(220,220,220,1)",
@@ -63,9 +63,11 @@ require(['jquery','charts'], function($, Chart) {
       var helpers = Chart.helpers;
 
   	  var reservationsByDayCtx = document.getElementById("reservations_by_day_graphic").getContext("2d");
+      var scaleStepWidth = Math.ceil(Math.max.apply(null, dashboardModel.reservationsByDayData.datasets[0].data)/10);
+      console.log(scaleStepWidth);
       var reservationsByDayOptions = { //String - A legend template
         legendTemplate : "<ul class=\"<%%=name.toLowerCase()%>-legend\"><%% for (var i=0; i<segments.length; i++){%><li><span style=\"background-color:<%%=segments[i].fillColor%>\"></span><%%if(segments[i].label){%><%%=segments[i].label%><%%}%></li><%%}%></ul>",
-        scaleOverride: true, scaleStartValue: 0, scaleStepWidth: Math.max.apply(null, dashboardModel.reservationsByDayData.datasets[0].data)/10, scaleSteps: 10, scaleIntegersOnly: true
+        scaleOverride: true, scaleStartValue: 0, scaleStepWidth: scaleStepWidth, scaleSteps: 10, scaleIntegersOnly: true
       };
       var reservationsByDayChart = new Chart(reservationsByDayCtx).Bar(dashboardModel.reservationsByDayData,reservationsByDayOptions);
       
@@ -123,9 +125,10 @@ require(['jquery','charts'], function($, Chart) {
 
       // Last 30 days reservations 
   	  var last30DaysReservationsCtx = document.getElementById("last_30_days_reservations_graphic").getContext("2d");
+      var scaleStepWidth = Math.ceil(Math.max.apply(null, dashboardModel.last30DaysReservationsData.datasets[0].data)/10);
       var last30DaysReservationsOptions = { //String - A legend template
         legendTemplate : "<ul class=\"<%%=name.toLowerCase()%>-legend\"><%% for (var i=0; i<segments.length; i++){%><li><span style=\"background-color:<%%=segments[i].fillColor%>\"></span><%%if(segments[i].label){%><%%=segments[i].label%><%%}%></li><%%}%></ul>",
-        scaleOverride: true, scaleStartValue: 0, scaleStepWidth: Math.max.apply(null, dashboardModel.last30DaysReservationsData.datasets[0].data)/10, scaleSteps: 10, scaleIntegersOnly: true
+        scaleOverride: true, scaleStartValue: 0, scaleStepWidth: scaleStepWidth, scaleSteps: 10, scaleIntegersOnly: true
       };
       var last30DaysReservationsChart = new Chart(last30DaysReservationsCtx).Line(dashboardModel.last30DaysReservationsData,last30DaysReservationsOptions);
 
